tdf#119748 sw layout: Invalidate when position changes

The specific thing failing was that, for a .doc or .docx file,
text wrapping didn't layout around a pasted image until
resizing or re-anchoring or anything that modified the image.
Menu-inserted images worked fine, but it looks like that
happened "by accident" during an EndAllAction().

It worked after both InvalidatePrt or InvalidatePos.
InvalidatePos seems a bit cheaper on a code-read, but I
could easily be wrong about that. In any case, it seems like a
better fit for this particular case.

The only alternative I've found is in frmtool.cxx's
~SwFlyNotify(), but I didn't see any cleaner method
of handling it there.

I'm a little afraid of causing a loop here - invalidating the
fly which might invalidate the content ...
But I haven't seen evidence yet that I cause this in real life.

Change-Id: I40c3117a75f00b7fa7bce29b7b18a2ccf7f2b00d